# BDR_reader

./: .gitignore  BDR_reader.py  LICENSE  pyproject.toml
lib/: BDR_lib.py  cursors.py  display_properties.py  widgets.py
