[tool.poetry]
name = "BDR_reader"
version = "0.1.0"
description = "Visualization of BDR files"
authors = ["Marcos Gonzalez Diaz <mgd@sbtinstruments.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
mplcursors = "^0.4"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
